Addressed java.xml.bind issues as part of JEP 320 for Java 11.
As part of #5753 / #5750, migrates base 64 binary image data loading away from java.xml.bind as Java 11 has removed the deprecated module [JEP 320](As part of #5753 / #5750).